samples/_failures_safe/1761793418_f354e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_793511db.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_793511db.c:139: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_793511db.c:138:9: error: expected declaration or statement at end of input
  138 |         if
      |         ^~
./samples/SAFE/__tmp_793511db.c:138:9: error: expected declaration or statement at end of input
